...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="onLoginClick"
            android:text="LOGIN"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>
...
