...
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="waiterOptionsClicked"
            android:text="Waiter Options"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lineSpacingExtra="14sp"
            android:onClick="reportsClicked"
            android:text="Reports"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
...
